# generic-coding-agent

./: .gitignore  AGENTS.md  Dockerfile  README.md  compose.yaml  conftest.py  pyproject.toml
.gca/: config.yaml
.github/workflows/: ci.yml
evals/: __init__.py  harness.py  test_eval_scenarios.py  test_hosted_quality.py
evals/scenarios/: agents_md_model_override.yaml  apply_patch_multi_hunk.yaml  feature_budget_exhaustion_pauses.yaml  feature_budget_reserve_resume.yaml  feature_greeting.yaml  feature_impl_review_budget_resume.yaml  feature_invalid_review_verdict_fails.yaml  feature_resume_mid_implementation.yaml  feature_review_rework.yaml  feature_rework_exhausted_fails.yaml  hosted_fixed_command_exposure.yaml  manifest_persona_and_skill.yaml  manifest_routing_override.yaml  manifest_tool_deny.yaml  models_yaml_named_profiles.yaml  named_model_bindings.yaml  routing_new_feature.yaml  routing_small_typo.yaml  shell_guardrails_block_rm.yaml
examples/: demo_script.json  e2e_webhook.sh  models.yaml  service.env.example
examples/plugins/: word_count_tool.py
examples/templates/: AGENTS.md  Dockerfile.agent  gca.gitignore  models.yaml
src/gca/: __init__.py  __main__.py  agent.py  cli.py  complexity.py  context.py  credentials.py  frontmatter.py  models.py  (+17 more)
tests/: conftest.py  test_agent_loop.py  test_cli.py  test_context.py  test_credentials.py  test_docker_limits.py  test_executor.py  test_executor_docker.py  test_executor_prune.py  test_fallback_provider.py  test_filesystem.py  test_fixed_tools.py  test_git_auth.py  test_git_credentials.py  test_job_runner.py  test_jobs.py  test_merge_cleanup.py  test_model_config.py  test_model_loading.py  test_models.py  test_openai_provider.py  test_orchestrator.py  test_orchestrator_budget.py  test_patch.py  test_personas.py  test_plugins.py  test_provider_fallback_routing.py  test_repo_config.py  test_routing.py  test_scm_adapters.py  test_scm_publication.py  test_secret_redaction.py  test_session.py  test_shell_safety.py  test_skills.py  test_sqlite_init.py  test_tool_arguments.py  test_tool_call.py  test_tool_policy.py  test_usage.py  (+2 more)
(+92 files in other folders)
