[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "generic-coding-agent"
version = "0.1.0"
description = "A provider-agnostic, pluggable autonomous coding-agent harness (core loop, sessions, tools, skills)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "pytest>=8.0",
    "mypy>=1.8",
    "types-PyYAML",
]

[project.scripts]
gca = "gca.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
packages = ["gca"]
ignore_missing_imports = true
